# ha-services

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt
src/CSM/: CActionFactory.cpp  CActionFactory.h  CArgoConfigurator.cpp  CArgoConfigurator.h  CGenericAction.h  CGenericCondition.h  CMakeLists.txt  CState.cpp  CState.h  CStateMachine.cpp  CStateMachine.h  CTransition.cpp  CTransition.h  IAction.h  IActionFactory.h  ICSMBuilder.h  ICSMConfigurator.h  ICondition.h  Makefile  cmake_install.cmake
src/Example/: CExample.cpp  CExample.h  CMakeLists.txt
src/Global/: CMakeLists.txt  GlobalTypes.h
src/ModemManager/: CMakeLists.txt  main.cpp
src/Runtime/: CExecutable.cpp  CExecutable.h  CLogger.cpp  CLogger.h  CLoggerMsg.cpp  CLoggerMsg.h  CMakeLists.txt  CMessage.cpp  CMessage.h  CMessenger.cpp  CMessenger.h  CRuntimeUnit.cpp  CRuntimeUnit.h  CTimerManager.cpp  CTimerManager.h  ILogger.h  IMessenger.h  IMessengerListener.h  IMsgSubscriber.h  ITimerListener.h  ITimerManager.h  Logger.h  executableMain.cpp
src/SpeakingAgent/: CMakeLists.txt  CSpeakingAgent.cpp  CSpeakingAgent.h  CTTS.cpp  CTTS.h
src/UCL/: CFastHash.cpp  CFastHash.h  CFile.cpp  CFile.h  CMakeLists.txt  CMemoryInfo.cpp  CMemoryInfo.h  CPROCInfoParserBase.h  CSemaphore.cpp  CSemaphore.h  CSerialPort.cpp  CSerialPort.h  CSerializable.cpp  CSerializable.h  CSharedMemory.cpp  CSharedMemory.h  CThread.cpp  CThread.h  CTokenizer.cpp  CTokenizer.h  CUnixDomainSocket.cpp  CUnixDomainSocket.h  FileSystem.cpp  FileSystem.h  IUnixDomainSocket.h  InfoItemTypes.h  SystemEnvironment.cpp  SystemEnvironment.h
src/XMLParser/: CMakeLists.txt  xmlParser.cpp  xmlParser.h
src/oFonoIntegration/: CMakeLists.txt  CModem.cpp  CModem.h  CModemContext.cpp  CModemContext.h  CModemManager.cpp  CModemManager.h  CModemProxy.cpp  CModemProxy.h  CoFonoProxy.cpp  CoFonoProxy.h  IModemManagerEvents.h  ITextMessageEvents.h  oFonoTypes.h
